--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bcrypt": "^3.0.0",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
+    "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.2.16"
   }
 }
