--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "jsonwebtoken": "^8.3.0",
-    "mongoose": "^5.2.16"
+    "mongoose": "^5.2.16",
+    "mongoose-paginate": "^5.0.3"
   }
 }
